--- a/CatKeeper/app/build.gradle
+++ b/CatKeeper/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -22,11 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'com.android.support:appcompat-v7:26.0.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.github.bumptech.glide:glide:4.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -34,7 +31,27 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
 //    implementation 'io.reactivex.rxjava2:rxjava:2.1.4'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+//    testCompile ('org.powermock:powermock-api-mockito:1.6.2') {
+//        exclude module: 'hamcrest-core'
+//        exclude module: 'objenesis'
+//    }
+//
+//    testCompile ('org.powermock:powermock-module-junit4:1.6.2') {
+//        exclude module: 'hamcrest-core'
+//        exclude module: 'objenesis'
+//    }
+
+    testCompile "org.mockito:mockito-core:2.7.17"
+//    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+//    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
 }
 
 repositories {
