--- a/CatKeeper/app/build.gradle
+++ b/CatKeeper/app/build.gradle
@@ -19,6 +19,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
 }
 
 dependencies {
@@ -40,7 +47,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    testCompile "org.mockito:mockito-core:2.10.0"
+    testImplementation "org.mockito:mockito-core:2.10.0"
+    testImplementation "org.robolectric:robolectric:3.4.2"
 }
 
 repositories {
