--- a/CatKeeper/app/build.gradle
+++ b/CatKeeper/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.github.bumptech.glide:glide:4.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
