added scene animation'

--- a/CatKeeper/app/src/main/AndroidManifest.xml
+++ b/CatKeeper/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.CatDetailActivity" />
+        <activity android:name=".activity.CatDetailActivity" android:theme="@style/Transparent"/>
         <activity android:name=".activity.MainActivity"/>
     </application>
 
